--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -167,11 +167,11 @@
   .bd-header-carbon
     margin-top: 1.5rem
 
-+mobile
++touch
   .bd-side-background
     display: none
 
-+tablet
++desktop
   .bd-duo
     display: flex
   .bd-lead
