--- a/docs/_sass/patreon.sass
+++ b/docs/_sass/patreon.sass
@@ -1,7 +1,9 @@
 .bd-side-sponsors
-  margin-top: 1.5rem
+  margin-top: 3rem
+  text-align: center
 
-.bd-side-sponsor-label
+.bd-side-sponsor-label,
+.bd-banner-label
   color: $grey-light
   font-size: 0.75rem
   margin-bottom: 0.75rem
@@ -17,9 +19,8 @@
 .bd-banner
   border-radius: $radius-large
   display: block
-  overflow: hidden
-  margin-top: 1.5rem
-  padding: 1.5rem
+  margin-top: 3rem
+  padding-bottom: 1.5rem
   position: relative
   text-align: center
   transition-duration: $speed
@@ -31,9 +32,9 @@
   &.is-patreon
     background-color: $patreon-blue
     color: $white
-  &.is-fortyfour
-    background-color: $white
-    border: 2px solid $background
+  // &.is-fortyfour
+  //   background-color: $white
+  //   border: 2px solid $background
   .button
     transform-origin: center
     transition-duration: $speed
@@ -44,7 +45,7 @@
     .bd-banner-title
       color: currentColor
     .button
-      transform: scale(1.1)
+      transform: scale(1.05)
 
 .bd-banner-background
   +overlay
@@ -61,9 +62,10 @@
   margin-bottom: 0.25em
 
 .bd-banner-text
+  display: none
   font-size: 0.875em
   line-height: 1.25
-  padding: 0 0.5em
+  margin-bottom: 0.5rem
   position: relative
 
 .bd-banner-image
@@ -72,6 +74,8 @@
   margin-top: 1rem
   img
     display: inline-block
+    // left: -8px
+    // position: relative
     vertical-align: top
 
 .bd-banner-button
