--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10396,13 +10396,13 @@ label.panel-block:hover {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1087px) {
   .bd-side-background {
     display: none;
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 1088px) {
   .bd-duo {
     display: flex;
   }
@@ -13390,10 +13390,12 @@ svg {
 }
 
 .bd-side-sponsors {
-  margin-top: 1.5rem;
+  margin-top: 3rem;
+  text-align: center;
 }
 
-.bd-side-sponsor-label {
+.bd-side-sponsor-label,
+.bd-banner-label {
   color: #b5b5b5;
   font-size: 0.75rem;
   margin-bottom: 0.75rem;
@@ -13413,9 +13415,8 @@ svg {
 .bd-banner {
   border-radius: 6px;
   display: block;
-  overflow: hidden;
-  margin-top: 1.5rem;
-  padding: 1.5rem;
+  margin-top: 3rem;
+  padding-bottom: 1.5rem;
   position: relative;
   text-align: center;
   transition-duration: 86ms;
@@ -13433,11 +13434,6 @@ svg {
 .bd-banner.is-patreon {
   background-color: #052d49;
   color: white;
-}
-
-.bd-banner.is-fortyfour {
-  background-color: white;
-  border: 2px solid whitesmoke;
 }
 
 .bd-banner .button {
@@ -13459,8 +13455,8 @@ svg {
 }
 
 .bd-banner:hover .button {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .bd-banner-background {
@@ -13479,9 +13475,10 @@ svg {
 }
 
 .bd-banner-text {
+  display: none;
   font-size: 0.875em;
   line-height: 1.25;
-  padding: 0 0.5em;
+  margin-bottom: 0.5rem;
   position: relative;
 }
 
