--- a/docs/_sass/native.sass
+++ b/docs/_sass/native.sass
@@ -1,9 +1,20 @@
 .native-js
-  border-top: 2px solid $background
   display: none
   font-size: 1rem
   opacity: 0
+  position: relative
   visibility: hidden
+  &::before
+    +overlay
+    background-color: #000
+    bottom: 0
+    content: ""
+    display: block
+    left: 0
+    opacity: 0.02
+    pointer-events: none
+    right: 0
+    top: 0
 
 .native-show
   display: block
@@ -15,6 +26,7 @@
   display: flex
   justify-content: center
   padding: 2em
+  position: relative
   text-decoration: none
   &:hover
     .native-cta
