--- a/docs/_sass/footer.sass
+++ b/docs/_sass/footer.sass
@@ -38,9 +38,8 @@
 
 .bd-footer-support
   @extend %bd-footer-box
-  border-top: 2px solid $background
-  // background-color: $white-bis
-  // box-shadow: none
+  border-top: none
+  box-shadow: none
   padding: 3rem
   .bd-footer-title
     margin-bottom: 1.5rem
