--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -544,6 +544,8 @@ $help-size: $size-small !default
   font-size: $size-normal
   position: relative
   text-align: left
+  display: flex
+  box-sizing: border-box
   // Modifiers
   // DEPRECATED
   &.has-icon
