--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -74,6 +74,8 @@ $navbar-bottom-box-shadow-size: 0 -2px 0 0 !default
         .navbar-link
           &::after
             border-color: $color-invert
+      .navbar-burger
+        color: $color-invert
       +desktop
         .navbar-start,
         .navbar-end
