--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -159,15 +159,15 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
   display: none !important
 
 .is-sr-only
-    position: absolute !important
-    width: 1px !important
-    height: 1px !important
-    padding: 0 !important
-    border: 0 !important
-    overflow: hidden !important
-    clip: rect(0, 0, 0, 0) !important
-    clip-path: inset(50%) !important
-    white-space: nowrap !important
+  border: none !important
+  clip-path: inset(50%) !important
+  clip: rect(0, 0, 0, 0) !important
+  height: 0.01em !important
+  overflow: hidden !important
+  padding: 0 !important
+  position: absolute !important
+  white-space: nowrap !important
+  width: 0.01em !important
 
 +mobile
   .is-hidden-mobile
