--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1366,6 +1366,19 @@ a.has-text-danger:hover, a.has-text-danger:focus {
   display: none !important;
 }
 
+.is-sr-only {
+  border: none !important;
+  -webkit-clip-path: inset(50%) !important;
+          clip-path: inset(50%) !important;
+  clip: rect(0, 0, 0, 0) !important;
+  height: 0.01em !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 0.01em !important;
+}
+
 @media screen and (max-width: 768px) {
   .is-hidden-mobile {
     display: none !important;
@@ -4437,7 +4450,7 @@ a.box:active {
   position: relative;
 }
 
-.notification a:not(.button) {
+.notification a:not(.button):not(.dropdown-item) {
   color: currentColor;
   text-decoration: underline;
 }
@@ -13043,7 +13056,7 @@ svg {
     margin-top: 3rem;
     width: calc(50% - 3rem);
   }
-  .bd-website:nth-child(1) {
+  .bd-website:nth-child(1), .bd-website:nth-child(2) {
     margin-top: 0;
   }
   .bd-website.bd-is-highlighted {
