--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -45,15 +45,29 @@
   margin-left: auto
 
 .bd-header
-  border-bottom: 2px solid $background
   margin-bottom: $main-spacing
-  padding-bottom: $main-spacing
   .subtitle
     color: $text-light
     strong
       color: currentColor
   #meta
     margin-top: -0.5rem
+
+.bd-tabs
+  margin-bottom: $main-spacing
+  .tabs
+    overflow: visible
+    ul,
+    a
+      border-bottom-color: $white-ter
+      border-bottom-width: 2px
+    ul
+      flex-wrap: wrap
+      max-width: 100%
+    a
+      margin-bottom: -2px
+    li:not(.is-active) a:hover
+        border-bottom-color: $border
 
 .bd-content
   hr:first-child
@@ -195,7 +209,7 @@
   .bd-header
     align-items: center
     display: flex
-    min-height: 130px
+    min-height: 140px
   .bd-header-titles
     flex-grow: 1
     flex-shrink: 1
