--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10246,9 +10246,7 @@ label.panel-block:hover {
 }
 
 .bd-header {
-  border-bottom: 2px solid whitesmoke;
   margin-bottom: 3rem;
-  padding-bottom: 3rem;
 }
 
 .bd-header .subtitle {
@@ -10261,6 +10259,33 @@ label.panel-block:hover {
 
 .bd-header #meta {
   margin-top: -0.5rem;
+}
+
+.bd-tabs {
+  margin-bottom: 3rem;
+}
+
+.bd-tabs .tabs {
+  overflow: visible;
+}
+
+.bd-tabs .tabs ul,
+.bd-tabs .tabs a {
+  border-bottom-color: whitesmoke;
+  border-bottom-width: 2px;
+}
+
+.bd-tabs .tabs ul {
+  flex-wrap: wrap;
+  max-width: 100%;
+}
+
+.bd-tabs .tabs a {
+  margin-bottom: -2px;
+}
+
+.bd-tabs .tabs li:not(.is-active) a:hover {
+  border-bottom-color: #dbdbdb;
 }
 
 .bd-content hr:first-child {
@@ -10370,7 +10395,7 @@ label.panel-block:hover {
 
 .bd-anchors {
   display: none;
-  max-width: 14rem;
+  max-width: 10.5rem;
   padding-top: calc(1.5rem - 1px);
 }
 
@@ -10429,7 +10454,7 @@ label.panel-block:hover {
     display: flex;
   }
   .bd-side {
-    flex: 0 0 calc(14rem + 1.5rem);
+    flex: 0 0 calc(10.5rem + 1.5rem);
   }
 }
 
@@ -10447,7 +10472,7 @@ label.panel-block:hover {
   .bd-header {
     align-items: center;
     display: flex;
-    min-height: 130px;
+    min-height: 140px;
   }
   .bd-header-titles {
     flex-grow: 1;
