Customize section init

--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -2,6 +2,17 @@
   overflow: hidden
   position: relative
 
+.bd-figure
+  +block
+  border: 2px solid $white-ter
+  border-radius: $radius
+  text-align: center
+  figcaption
+    background-color: $white-ter
+    color: $text-light
+    font-size: $size-small
+    padding: 1em
+
 // Lead
 
 .bd-lead
@@ -140,6 +151,14 @@
   position: relative
   &.is-active
     color: $link
+  .tag
+    border-radius: 2px
+    font-family: Verdana
+    font-size: 0.5rem
+    font-weight: bold
+    height: 2.25em
+    margin-left: 0.5em
+    vertical-align: text-bottom
 
 .bd-category-list
   @extend %bd-list
