--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -228,6 +228,7 @@
 .bd-anchor-link
   position: absolute
   right: calc(100% + 1rem)
+  top: 0
   +until($widescreen)
     left: 0
     right: auto
