--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -52,7 +52,7 @@
 }
 
 .box:not(:last-child), .content:not(:last-child), .notification:not(:last-child), .progress:not(:last-child), .table:not(:last-child), .table-container:not(:last-child), .title:not(:last-child),
-.subtitle:not(:last-child), .block:not(:last-child), .highlight:not(:last-child), .breadcrumb:not(:last-child), .level:not(:last-child), .message:not(:last-child), .tabs:not(:last-child), .bd-snippet:not(:last-child), .bd-callout:not(:last-child) {
+.subtitle:not(:last-child), .block:not(:last-child), .highlight:not(:last-child), .breadcrumb:not(:last-child), .level:not(:last-child), .message:not(:last-child), .tabs:not(:last-child), .bd-figure:not(:last-child), .bd-snippet:not(:last-child), .bd-callout:not(:last-child) {
   margin-bottom: 1.5rem;
 }
 
@@ -10192,6 +10192,19 @@ label.panel-block:hover {
   position: relative;
 }
 
+.bd-figure {
+  border: 2px solid whitesmoke;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.bd-figure figcaption {
+  background-color: whitesmoke;
+  color: #7a7a7a;
+  font-size: 0.75rem;
+  padding: 1em;
+}
+
 .bd-lead {
   position: relative;
 }
@@ -10382,6 +10395,16 @@ label.panel-block:hover {
 
 .bd-category-name.is-active {
   color: #3273dc;
+}
+
+.bd-category-name .tag {
+  border-radius: 2px;
+  font-family: Verdana;
+  font-size: 0.5rem;
+  font-weight: bold;
+  height: 2.25em;
+  margin-left: 0.5em;
+  vertical-align: text-bottom;
 }
 
 .bd-category-list {
@@ -12152,6 +12175,7 @@ svg {
 .bd-anchor-link {
   position: absolute;
   right: calc(100% + 1rem);
+  top: 0;
 }
 
 @media screen and (max-width: 1279px) {
