--- a/docs/_includes/components/categories.html
+++ b/docs/_includes/components/categories.html
@@ -4,6 +4,7 @@
     {% assign category_links = category[1] %}
     {% assign category_link = site.data.links.by_id[category_id] %}
 
+    {% if category_link.name != 'Customize' %}
     <div class="bd-category {% if category_id == current_category %}is-active{% endif %}">
       <header class="bd-category-header">
         <a class="bd-category-toggle">
@@ -13,6 +14,11 @@
         </a>
         <a class="bd-category-name {% if category_id == current_link_id %}is-active{% endif %}" href="{{ site.url }}{{ category_link.path }}">
           <strong>{{ category_link.name }}</strong>
+          {% if category_link.name == 'Customize' %}
+            <span class="tag is-success">
+              New!
+            </span>
+          {% endif %}
         </a>
       </header>
 
@@ -27,6 +33,7 @@
         {% endfor %}
       </ul>
     </div>
+    {% endif %}
   {% endfor %}
 </nav>
 
