Add Sass CLI steps

--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -4,10 +4,16 @@
 
 .bd-figure
   +block
+  align-items: center
   border: 2px solid $white-ter
   border-radius: $radius
+  display: flex
+  flex-direction: column
   text-align: center
+  img
+    margin: 1em
   figcaption
+    align-self: stretch
     background-color: $white-ter
     color: $text-light
     font-size: $size-small
@@ -85,6 +91,8 @@
     display: none
     & + .bd-anchor-title
       padding-top: 0
+      .bd-anchor-link
+        top: 0
 
 // Side
 
