--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -228,7 +228,7 @@
 .bd-anchor-link
   position: absolute
   right: calc(100% + 1rem)
-  top: 0
+  top: 1.5rem
   +until($widescreen)
     left: 0
     right: auto
