--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10193,12 +10193,20 @@ label.panel-block:hover {
 }
 
 .bd-figure {
+  align-items: center;
   border: 2px solid whitesmoke;
   border-radius: 4px;
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 
+.bd-figure img {
+  margin: 1em;
+}
+
 .bd-figure figcaption {
+  align-self: stretch;
   background-color: whitesmoke;
   color: #7a7a7a;
   font-size: 0.75rem;
@@ -10307,6 +10315,10 @@ label.panel-block:hover {
 
 .bd-content hr:first-child + .bd-anchor-title {
   padding-top: 0;
+}
+
+.bd-content hr:first-child + .bd-anchor-title .bd-anchor-link {
+  top: 0;
 }
 
 .bd-side,
@@ -12175,7 +12187,7 @@ svg {
 .bd-anchor-link {
   position: absolute;
   right: calc(100% + 1rem);
-  top: 0;
+  top: 1.5rem;
 }
 
 @media screen and (max-width: 1279px) {
