Add Webpack page

--- a/docs/_includes/index/customize.html
+++ b/docs/_includes/index/customize.html
@@ -1,4 +1,4 @@
-{% assign customize_link = site.data.links.by_id['overview-customize'] %}
+{% assign customize_link = site.data.links.by_id['customize'] %}
 
 <section id="customize" class="bd-easy section is-medium">
   <div class="container">
