--- a/docs/_includes/snippets/customized.html
+++ b/docs/_includes/snippets/customized.html
@@ -22,4 +22,4 @@ $input-border-color: transparent;
 $input-shadow: none;
 
 // Import the rest of Bulma
-@import "../bulma";
+@import "../path/to/bulma";
