--- a/docs/_includes/steps/add-custom-styles.html
+++ b/docs/_includes/steps/add-custom-styles.html
@@ -49,9 +49,15 @@ $input-shadow: none;
   </div>
 
   <div class="content">
-    <p>
-      Since you are watching for changes, simply <strong>save the file</strong> to see the result:
-    </p>
+    {% if include.build %}
+      <p>
+        Rebuild the CSS to see the result:
+      </p>
+    {% else %}
+      <p>
+        Since you are watching for changes, simply <strong>save the file</strong> to see the result:
+      </p>
+    {% endif %}
   </div>
 
   {%
