--- a/docs/_includes/steps/create-sass-file.html
+++ b/docs/_includes/steps/create-sass-file.html
@@ -1,6 +1,6 @@
 {% capture scss_bulma %}
 @charset "utf-8";
-@import "{{ include.path }}/bulma/bulma.sass";
+@import "{{ include.path }}";
 {% endcapture %}
 
 {% capture step_3 %}
@@ -19,9 +19,32 @@
   </div>
 {% endcapture %}
 
+{% capture step_3_bis %}
+  <div class="content">
+    <p>
+      Inside the same <code>src</code> folder, add a file called <code>mystyles.scss</code>:
+    </p>
+  </div>
+
+  {% highlight scss %}{{ scss_bulma }}{% endhighlight %}
+
+  <div class="content">
+    <p>
+      Make sure to write the correct path to the <code>bulma</code> folder.
+    </p>
+  </div>
+{% endcapture %}
+
 {% assign step_title = ". Create a Sass file" | prepend: include.number %}
 
-{% include components/step.html
-  title=step_title
-  content=step_3
-%}
+{% if include.bis == true %}
+  {% include components/step.html
+    title=step_title
+    content=step_3_bis
+  %}
+{% else %}
+  {% include components/step.html
+    title=step_title
+    content=step_3
+  %}
+{% endif %}
