--- a/docs/_includes/steps/create-html-page.html
+++ b/docs/_includes/steps/create-html-page.html
@@ -9,7 +9,7 @@
 
   <div class="content">
     <p>
-      Save this file as <code>mypage.html</code>.
+      Save this file as <code>mypage.html</code>{% if include.dist == true %} in the <code>dist</code> folder{% endif %}.
     </p>
     <p>
       Notice the <code>css/mystyles.css</code> path for your stylesheet. This will be the location of the CSS file we will generate with Sass.
