Change $border to $grey-lighter in mixins. Fixes #1862

--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -238,7 +238,7 @@
 
 %loader
   animation: spinAround 500ms infinite linear
-  border: 2px solid $border
+  border: 2px solid $grey-lighter
   border-radius: $radius-rounded
   border-right-color: transparent
   border-top-color: transparent
