--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -130,18 +130,15 @@
 
 // Placeholders
 
-%unselectable
+=unselectable
   -webkit-touch-callout: none
   -webkit-user-select: none
   -moz-user-select: none
   -ms-user-select: none
   user-select: none
 
-=unselectable
-  @extend %unselectable
-
-%arrow
-  border: 3px solid transparent
+=arrow($color: transparent)
+  border: 3px solid $color
   border-radius: 2px
   border-right: 0
   border-top: 0
@@ -156,19 +153,12 @@
   transform-origin: center
   width: 0.625em
 
-=arrow($color)
-  @extend %arrow
-  border-color: $color
-
-%block
+=block
   &:not(:last-child)
     margin-bottom: 1.5rem
 
-=block
-  @extend %block
-
-%delete
-  @extend %unselectable
+=delete
+  +unselectable
   -moz-appearance: none
   -webkit-appearance: none
   background-color: rgba($black, 0.2)
@@ -233,12 +223,9 @@
     min-width: 32px
     width: 32px
 
-=delete
-  @extend %delete
-
-%loader
+=loader
   animation: spinAround 500ms infinite linear
-  border: 2px solid $border
+  border: 2px solid $grey-lighter
   border-radius: $radius-rounded
   border-right-color: transparent
   border-top-color: transparent
@@ -248,18 +235,12 @@
   position: relative
   width: 1em
 
-=loader
-  @extend %loader
-
-%overlay
+=overlay($offset: 0)
   bottom: 0
   left: 0
   position: absolute
   right: 0
   top: 0
-
-=overlay($offset: 0)
-  @extend %overlay
   @if $offset != 0
     bottom: $offset
     left: $offset
