Button can be instead of a for improved accessibility

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -98,7 +98,8 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
   $color: nth($pair, 1)
   .has-text-#{$name}
     color: $color !important
-  a.has-text-#{$name}
+  a.has-text-#{$name},
+  button.has-text-#{$name}
     &:hover,
     &:focus
       color: darken($color, 10%) !important
