--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -12,7 +12,10 @@ $breadcrumb-item-separator-color: $grey-light !default
   +unselectable
   font-size: $size-normal
   white-space: nowrap
-  a
+  button
+    +reset-button
+  a,
+  button
     align-items: center
     color: $breadcrumb-item-color
     display: flex
@@ -23,10 +26,13 @@ $breadcrumb-item-separator-color: $grey-light !default
   li
     align-items: center
     display: flex
-    &:first-child a
-      padding-left: 0
+    &:first-child
+      a,
+      button
+        padding-left: 0
     &.is-active
-      a
+      a,
+      button
         color: $breadcrumb-item-active-color
         cursor: default
         pointer-events: none
