--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -21,11 +21,15 @@ $menu-label-color: $text-light !default
 
 .menu-list
   line-height: 1.25
-  a
+  button
+    +reset-button
+  a,
+  button
     border-radius: $menu-item-radius
     color: $menu-item-color
     display: block
     padding: 0.5em 0.75em
+    width: 100%
     &:hover
       background-color: $menu-item-hover-background-color
       color: $menu-item-hover-color
