--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -66,6 +66,7 @@ $navbar-bottom-box-shadow-size: 0 -2px 0 0 !default
         .navbar-link
           color: $color-invert
         & > a.navbar-item,
+        & > button.navbar-item,
         .navbar-link
           &:hover,
           &.is-active
@@ -81,6 +82,7 @@ $navbar-bottom-box-shadow-size: 0 -2px 0 0 !default
           .navbar-link
             color: $color-invert
           & > a.navbar-item,
+          & > button.navbar-item,
           .navbar-link
             &:hover,
             &.is-active
@@ -94,7 +96,8 @@ $navbar-bottom-box-shadow-size: 0 -2px 0 0 !default
           background-color: darken($color, 5%)
           color: $color-invert
         .navbar-dropdown
-          a.navbar-item
+          a.navbar-item,
+          button.navbar-item
             &.is-active
               background-color: $color
               color: $color-invert
@@ -130,7 +133,8 @@ body
   min-height: $navbar-height
 
 .navbar-brand
-  a.navbar-item
+  a.navbar-item,
+  button.navbar-item
     &:hover
       background-color: transparent
 
@@ -140,7 +144,11 @@ body
   overflow-x: auto
   overflow-y: hidden
 
-.navbar-burger
+button.navbar-burger
+  +reset-button
+
+.navbar-burger,
+button.navbar-burger
   color: $navbar-burger-color
   +hamburger($navbar-height)
   margin-left: auto
@@ -148,8 +156,14 @@ body
 .navbar-menu
   display: none
 
+button.navbar-item,
+button.navbar-link
+  +reset-button
+
 .navbar-item,
-.navbar-link
+button.navbar-item,
+.navbar-link,
+button.navbar-link
   color: $navbar-item-color
   display: block
   line-height: 1.5
@@ -161,6 +175,7 @@ body
       margin-right: -0.25rem
 
 a.navbar-item,
+button.navbar-item,
 .navbar-link
   cursor: pointer
   &:hover,
@@ -276,10 +291,12 @@ a.navbar-item,
       .navbar-end
         align-items: center
       a.navbar-item,
+      button.navbar-item,
       .navbar-link
         border-radius: $radius
     &.is-transparent
       a.navbar-item,
+      button.navbar-item,
       .navbar-link
         &:hover,
         &.is-active
@@ -290,7 +307,8 @@ a.navbar-item,
           .navbar-link
             background-color: transparent !important
       .navbar-dropdown
-        a.navbar-item
+        a.navbar-item,
+        button.navbar-item
           &:hover
             background-color: $navbar-dropdown-item-hover-background-color
             color: $navbar-dropdown-item-hover-color
@@ -351,8 +369,10 @@ a.navbar-item,
     .navbar-item
       padding: 0.375rem 1rem
       white-space: nowrap
-    a.navbar-item
+    a.navbar-item,
+    button.navbar-item
       padding-right: 3rem
+      width: 100%
       &:hover
         background-color: $navbar-dropdown-item-hover-background-color
         color: $navbar-dropdown-item-hover-color
@@ -405,6 +425,7 @@ a.navbar-item,
       padding-bottom: $navbar-height + ($navbar-padding-vertical * 2)
   // Hover/Active states
   a.navbar-item,
+  button.navbar-item,
   .navbar-link
     &.is-active
       color: $navbar-item-active-color
