--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -37,7 +37,10 @@ $tabs-toggle-link-active-color: $link-invert !default
   overflow: hidden
   overflow-x: auto
   white-space: nowrap
-  a
+  button
+    +reset-button
+  a,
+  button
     align-items: center
     border-bottom-color: $tabs-border-bottom-color
     border-bottom-style: $tabs-border-bottom-style
@@ -54,7 +57,8 @@ $tabs-toggle-link-active-color: $link-invert !default
   li
     display: block
     &.is-active
-      a
+      a,
+      button
         border-bottom-color: $tabs-link-active-border-bottom-color
         color: $tabs-link-active-color
   ul
@@ -90,7 +94,8 @@ $tabs-toggle-link-active-color: $link-invert !default
       justify-content: flex-end
   // Styles
   &.is-boxed
-    a
+    a,
+    button
       border: 1px solid transparent
       border-radius: $tabs-boxed-link-radius $tabs-boxed-link-radius 0 0
       &:hover
@@ -98,7 +103,8 @@ $tabs-toggle-link-active-color: $link-invert !default
         border-bottom-color: $tabs-boxed-link-hover-border-bottom-color
     li
       &.is-active
-        a
+        a,
+        button
           background-color: $tabs-boxed-link-active-background-color
           border-color: $tabs-boxed-link-active-border-color
           border-bottom-color: $tabs-boxed-link-active-border-bottom-color !important
@@ -107,7 +113,8 @@ $tabs-toggle-link-active-color: $link-invert !default
       flex-grow: 1
       flex-shrink: 0
   &.is-toggle
-    a
+    a,
+    button
       border-color: $tabs-toggle-link-border-color
       border-style: $tabs-toggle-link-border-style
       border-width: $tabs-toggle-link-border-width
@@ -120,12 +127,15 @@ $tabs-toggle-link-active-color: $link-invert !default
     li
       & + li
         margin-left: -#{$tabs-toggle-link-border-width}
-      &:first-child a
+      &:first-child a,
+      &:first-child button
         border-radius: $tabs-toggle-link-radius 0 0 $tabs-toggle-link-radius
-      &:last-child a
+      &:last-child a,
+      &:last-child button
         border-radius: 0 $tabs-toggle-link-radius $tabs-toggle-link-radius 0
       &.is-active
-        a
+        a,
+        button
           background-color: $tabs-toggle-link-active-background-color
           border-color: $tabs-toggle-link-active-border-color
           color: $tabs-toggle-link-active-color
@@ -134,14 +144,18 @@ $tabs-toggle-link-active-color: $link-invert !default
       border-bottom: none
     &.is-toggle-rounded
       li
-        &:first-child a
-          border-bottom-left-radius: $radius-rounded
-          border-top-left-radius: $radius-rounded
-          padding-left: 1.25em
-        &:last-child a
-          border-bottom-right-radius: $radius-rounded
-          border-top-right-radius: $radius-rounded
-          padding-right: 1.25em
+        &:first-child
+          a,
+          button
+            border-bottom-left-radius: $radius-rounded
+            border-top-left-radius: $radius-rounded
+            padding-left: 1.25em
+        &:last-child
+          a,
+          button
+            border-bottom-right-radius: $radius-rounded
+            border-top-right-radius: $radius-rounded
+            padding-right: 1.25em
   // Sizes
   &.is-small
     font-size: $size-small
