--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -34,13 +34,15 @@
       .navbar-link
         color: rgba($color-invert, 0.7)
       a.navbar-item,
+      button.navbar-item,
       .navbar-link
         &:hover,
         &.is-active
           background-color: darken($color, 5%)
           color: $color-invert
       .tabs
-        a
+        a,
+        button
           color: $color-invert
           opacity: 0.9
           &:hover
@@ -50,16 +52,19 @@
             opacity: 1
         &.is-boxed,
         &.is-toggle
-          a
+          a,
+          button
             color: $color-invert
             &:hover
               background-color: rgba($black, 0.1)
-          li.is-active a
-            &,
-            &:hover
-              background-color: $color-invert
-              border-color: $color-invert
-              color: $color
+          li.is-active
+            a,
+            button
+              &,
+              &:hover
+                background-color: $color-invert
+                border-color: $color-invert
+                color: $color
       // Modifiers
       &.is-bold
         $gradient-top-left: darken(saturate(adjust-hue($color, -10deg), 10%), 10%)
