--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -68,6 +68,22 @@
     &:#{$placeholder}-placeholder
       @content
 
+%reset-button
+  -webkit-appearance: none
+  background: transparent
+  border: none
+  color: inherit
+  cursor: pointer
+  font: inherit
+  line-height: inherit
+  margin: 0
+  overflow: visible
+  padding: 0
+  text-align: inherit
+
+=reset-button
+  @extend %reset-button
+
 // Responsiveness
 
 =from($device)
