--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -48,7 +48,11 @@ $dropdown-divider-background-color: $border !default
   padding-bottom: 0.5rem
   padding-top: 0.5rem
 
-.dropdown-item
+button.dropdown-item
+  +reset-button
+
+.dropdown-item,
+button.dropdown-item
   color: $dropdown-item-color
   display: block
   font-size: 0.875rem
@@ -56,9 +60,11 @@ $dropdown-divider-background-color: $border !default
   padding: 0.375rem 1rem
   position: relative
 
-a.dropdown-item
+a.dropdown-item,
+button.dropdown-item
   padding-right: 3rem
   white-space: nowrap
+  width: 100%
   &:hover
     background-color: $dropdown-item-hover-background-color
     color: $dropdown-item-hover-color
