--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -16,7 +16,11 @@ $box-link-active-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 1px $link !def
   display: block
   padding: $box-padding
 
-a.box
+button.box
+  +reset-button
+
+a.box,
+button.box
   &:hover,
   &:focus
     box-shadow: $box-link-hover-shadow
