fix upload button showed

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -285,6 +285,8 @@ $help-size: $size-small !default
         border-radius: $file-radius
       .file-name
         display: none
+    .file-input
+      opacity: 0
   &.is-boxed
     .file-label
       flex-direction: column
