--- a/css/bulma.css
+++ b/css/bulma.css
@@ -3759,6 +3759,10 @@ a.box:active {
   border-radius: 4px;
 }
 
+.file.has-name .file-input {
+  opacity: 0;
+}
+
 .file.has-name.is-empty .file-name {
   display: none;
 }
