--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -13118,7 +13118,7 @@ svg {
     margin-top: 3rem;
     width: calc(50% - 3rem);
   }
-  .bd-website:nth-child(1), .bd-website:nth-child(2) {
+  .bd-website:nth-child(1) {
     margin-top: 0;
   }
   .bd-website.bd-is-highlighted {
