--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -50,12 +50,12 @@ $gap: 64px !default
 // 960, 1152, and 1344 have been chosen because they are divisible by both 12 and 16
 $tablet: 769px !default
 // 960px container + 4rem
-$desktop: 960px + (2 * $gap) !default
+$desktop: 960px + $gap !default
 // 1152px container + 4rem
-$widescreen: 1152px + (2 * $gap) !default
+$widescreen: 1152px + $gap !default
 $widescreen-enabled: true !default
 // 1344px container + 4rem
-$fullhd: 1344px + (2 * $gap) !default
+$fullhd: 1344px + $gap !default
 $fullhd-enabled: true !default
 
 // Miscellaneous
