--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -798,8 +798,16 @@ $(document).ready(function() {
     </li>
   </ul>
   <p>
-    You can add the modifier class <code>is-expanded</code> to turn it into a full-width element.
+    You can add the following <strong>modifier</strong> classes:
   </p>
+  <ul>
+    <li>
+      <code>is-expanded</code> to turn it into a full-width element
+    </li>
+    <li>
+      <code>is-tab</code> to add a bottom border on hover and show the bottom border using <code>is-active</code>
+    </li>
+  </ul>
 </div>
 
 {% include elements/anchor.html name="Transparent navbar" %}
