Fix mixins/extends confusion

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -17,7 +17,7 @@
 // Overlay
 
 .is-overlay
-  +overlay
+  @extend %overlay
 
 // Typography
 
@@ -258,4 +258,4 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
   box-shadow: none !important
 
 .is-unselectable
-  +unselectable
+  @extend %unselectable
