--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -201,7 +201,8 @@ a.navbar-item,
 .navbar-link:not(.is-arrowless)
   padding-right: 2.5em
   &::after
-    +arrow($navbar-dropdown-arrow)
+    @extend %arrow
+    border-color: $navbar-dropdown-arrow
     margin-top: -0.375em
     right: 1.125em
 
