--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -42,7 +42,7 @@ $button-static-border-color: $grey-lighter !default
 
 .button
   +control
-  +unselectable
+  @extend %unselectable
   background-color: $button-background-color
   border-color: $button-border-color
   border-width: $button-border-width
@@ -198,7 +198,7 @@ $button-static-border-color: $grey-lighter !default
     color: transparent !important
     pointer-events: none
     &::after
-      +loader
+      @extend %loader
       +center(1em)
       position: absolute !important
   &.is-static
