--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -18,7 +18,7 @@ $content-table-foot-cell-border-width: 2px 0 0 !default
 $content-table-foot-cell-color: $text-strong !default
 
 .content
-  +block
+  @extend %block
   // Inline
   li + li
     margin-top: 0.25em
