--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -54,7 +54,7 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
 .pagination-link,
 .pagination-ellipsis
   +control
-  +unselectable
+  @extend %unselectable
   font-size: 1em
   padding-left: 0.5em
   padding-right: 0.5em
