--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -13,12 +13,13 @@
   display: flex
   flex-wrap: wrap
   justify-content: space-between
-  a
-    align-items: center
-    display: flex
-    justify-content: center
-    margin-right: 1rem
-    min-height: $carbon-height
+
+.bd-partner-sponsor
+  align-items: center
+  display: flex
+  justify-content: center
+  margin-right: 1rem
+  min-height: $carbon-height + $carbon-poweredby-height
 
 .bd-partners
   background-color: $white-bis
@@ -42,7 +43,6 @@ $bd-partners-4: 1130px
     display: flex
     margin-left: auto
     margin-right: auto
-    max-width: $bd-partners-4
   .bd-partner
     &.bd-is-sponsor
       flex-grow: 1
