--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -13676,12 +13676,12 @@ svg {
   justify-content: space-between;
 }
 
-.bd-partner-sponsors a {
+.bd-partner-sponsor {
   align-items: center;
   display: flex;
   justify-content: center;
   margin-right: 1rem;
-  min-height: 100px;
+  min-height: 120px;
 }
 
 .bd-partners {
@@ -13708,7 +13708,6 @@ svg {
     display: flex;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1130px;
   }
   .bd-partner.bd-is-sponsor {
     flex-grow: 1;
