--- a/docs/_includes/elements/patreon-item.html
+++ b/docs/_includes/elements/patreon-item.html
@@ -1,5 +1,6 @@
 <li>
-  {{ backer.first_name }} {{ backer.last_name }}
+  {{ backer.name }}
+
   {% if backer.twitter != "" %}
     <a href="https://twitter.com/{{ backer.twitter }}" target="_blank" rel="nofollow">
       @{{ backer.twitter }}
