Add a navbar-breakpoint variable (as yet unused)

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -44,6 +44,8 @@ $navbar-divider-height: 2px !default
 
 $navbar-bottom-box-shadow-size: 0 -2px 0 0 !default
 
+$navbar-breakpoint: $desktop !default
+
 =navbar-fixed
   left: 0
   position: fixed
