--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -76,7 +76,7 @@ $navbar-breakpoint: $desktop !default
         .navbar-link
           &::after
             border-color: $color-invert
-      +desktop
+      +from($navbar-breakpoint)
         .navbar-start,
         .navbar-end
           & > .navbar-item,
@@ -223,7 +223,7 @@ a.navbar-item,
   height: $navbar-divider-height
   margin: 0.5rem 0
 
-+touch
++until($navbar-breakpoint)
   .navbar > .container
     display: block
   .navbar-brand,
@@ -264,7 +264,7 @@ a.navbar-item,
     &.has-navbar-fixed-bottom-touch
       padding-bottom: $navbar-height
 
-+desktop
++from($navbar-breakpoint)
   .navbar,
   .navbar-menu,
   .navbar-start,
