Add list style modifiers emulating type attribute values different then decimal to ol element in content class - fixes #1940

--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -73,6 +73,15 @@ $content-table-foot-cell-color: $text-strong !default
     list-style: decimal outside
     margin-left: 2em
     margin-top: 1em
+    // list style modifiers emulating ol[type] attribute values different then decimal
+    &.is-lower-roman
+      list-style-type: lower-roman
+    &.is-upper-roman
+      list-style-type: upper-roman
+    &.is-lower-alpha
+      list-style-type: lower-alpha
+    &.is-upper-alpha
+      list-style-type: upper-alpha
   ul
     list-style: disc outside
     margin-left: 2em
