--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -95,6 +95,14 @@
   font-size: 0.75em
   opacity: 0.5
 
++mobile
+  .bd-links
+    margin-left: -1.5rem
+    margin-right: -1.5rem
+  .bd-link
+    border-radius: 0
+    padding-right: 1.5rem
+
 +desktop
   .bd-links
     display: flex
