--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -12064,6 +12064,17 @@ svg {
   opacity: 0.5;
 }
 
+@media screen and (max-width: 768px) {
+  .bd-links {
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+  }
+  .bd-link {
+    border-radius: 0;
+    padding-right: 1.5rem;
+  }
+}
+
 @media screen and (min-width: 1088px) {
   .bd-links {
     display: flex;
