New control height and line height variables

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -1,6 +1,7 @@
 $input-color: $grey-darker !default
 $input-background-color: $white !default
 $input-border-color: $grey-lighter !default
+$input-height: $control-height !default
 $input-shadow: inset 0 1px 2px rgba($black, 0.1) !default
 
 $input-hover-color: $grey-darker !default
@@ -148,7 +149,7 @@ $help-size: $size-small !default
   position: relative
   vertical-align: top
   &:not(.is-multiple)
-    height: 2.25em
+    height: $input-height
   &:not(.is-multiple):not(.is-loading)
     &::after
       @extend %arrow
@@ -551,11 +552,11 @@ $help-size: $size-small !default
   &.has-icon
     .icon
       color: $input-icon-color
-      height: 2.25em
+      height: $input-height
       pointer-events: none
       position: absolute
       top: 0
-      width: 2.25em
+      width: $input-height
       z-index: 4
     .input
       &:focus
@@ -574,12 +575,12 @@ $help-size: $size-small !default
       .icon
         left: 0
       .input
-        padding-left: 2.25em
+        padding-left: $input-height
     &.has-icon-right
       .icon
         right: 0
       .input
-        padding-right: 2.25em
+        padding-right: $input-height
   &.has-icons-left,
   &.has-icons-right
     .input,
@@ -595,22 +596,22 @@ $help-size: $size-small !default
         font-size: $size-large
     .icon
       color: $input-icon-color
-      height: 2.25em
+      height: $input-height
       pointer-events: none
       position: absolute
       top: 0
-      width: 2.25em
+      width: $input-height
       z-index: 4
   &.has-icons-left
     .input,
     .select select
-      padding-left: 2.25em
+      padding-left: $input-height
     .icon.is-left
       left: 0
   &.has-icons-right
     .input,
     .select select
-      padding-right: 2.25em
+      padding-right: $input-height
     .icon.is-right
       right: 0
   &.is-loading
