--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -41,7 +41,7 @@ $button-static-border-color: $grey-lighter !default
   font-size: $size-large
 
 .button
-  +control
+  @extend %control
   @extend %unselectable
   background-color: $button-background-color
   border-color: $button-border-color
