--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -42,7 +42,7 @@ $label-weight: $weight-bold !default
 $help-size: $size-small !default
 
 =input
-  +control
+  @extend %control
   background-color: $input-background-color
   border-color: $input-border-color
   color: $input-color
@@ -363,7 +363,7 @@ $help-size: $size-small !default
 
 .file-cta,
 .file-name
-  +control
+  @extend %control
   border-color: $file-border-color
   border-radius: $file-radius
   font-size: 1em
