--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -9,7 +9,7 @@ $control-line-height: 1.5 !default
 $control-padding-vertical: calc(0.375em - #{$control-border-width}) !default
 $control-padding-horizontal: calc(0.625em - #{$control-border-width}) !default
 
-%control
+=control
   -moz-appearance: none
   -webkit-appearance: none
   align-items: center
@@ -36,8 +36,8 @@ $control-padding-horizontal: calc(0.625em - #{$control-border-width}) !default
   &[disabled]
     cursor: not-allowed
 
-=control
-  @extend %control
+%control
+  +control
 
 // The controls sizes use mixins so they can be used at different breakpoints
 =control-small
