Fix navbar-burger color when color modifier is used (#1982)
When using a color modifier for a navbar (e.g., is-dark) the burger icon does not change the color. This commit adds the color modification for the navbar burger icon.

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -76,6 +76,8 @@ $navbar-breakpoint: $desktop !default
         .navbar-link
           &::after
             border-color: $color-invert
+      .navbar-burger
+        color: $color-invert
       +from($navbar-breakpoint)
         .navbar-start,
         .navbar-end
