--- a/sass/components/list.sass
+++ b/sass/components/list.sass
@@ -9,19 +9,31 @@ $list-item-active-color: $link-invert !default
 $list-item-hover-background-color: $background !default
 
 .list
+  @extend %block
   background-color: $list-background-color
-  box-shadow: $list-shadow
   border-radius: $list-radius
-  &.is-hoverable > .list-item:hover:not(.is-active)
-    background-color: $list-item-hover-background-color
-    cursor: pointer
+  box-shadow: $list-shadow
+  // &.is-hoverable > .list-item:hover:not(.is-active)
+  //   background-color: $list-item-hover-background-color
+  //   cursor: pointer
 
 .list-item
-  color: $list-item-color
   display: block
   padding: 0.5em 1em
+  &:not(a)
+    color: $list-item-color
+  &:first-child
+    border-top-left-radius: $list-radius
+    border-top-right-radius: $list-radius
+  &:last-child
+    border-top-left-radius: $list-radius
+    border-top-right-radius: $list-radius
+  &:not(:last-child)
+    border-bottom: $list-item-border
   &.is-active
     background-color: $list-item-active-background-color
     color: $list-item-active-color
-  &:not(:last-child)
-    border-bottom: $list-item-border
+
+a.list-item
+  background-color: $list-item-hover-background-color
+  cursor: pointer
