Change dropdown icon to use pure CSS

--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -1,5 +1,5 @@
 $dropdown-content-background-color: $white !default
-$dropdown-content-arrow: $link !default
+$dropdown-content-arrow: $black !default
 $dropdown-content-offset: 4px !default
 $dropdown-content-radius: $radius !default
 $dropdown-content-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default
@@ -17,6 +17,11 @@ $dropdown-divider-background-color: $border !default
   display: inline-flex
   position: relative
   vertical-align: top
+  &::after
+    @extend %arrow
+    border-color: $dropdown-content-arrow
+    right: 1.125em
+    z-index: 4
   &.is-active,
   &.is-hoverable:hover
     .dropdown-menu
@@ -26,6 +31,9 @@ $dropdown-divider-background-color: $border !default
       left: auto
       right: 0
   &.is-up
+    &::after
+      transform: rotate(135deg)
+      top: 1.4em
     .dropdown-menu
       bottom: 100%
       padding-bottom: $dropdown-content-offset
@@ -72,3 +80,7 @@ a.dropdown-item
   display: block
   height: 1px
   margin: 0.5rem 0
+
+.dropdown-trigger
+  button
+    padding-right: 2.3em;
